--- a/.github/workflows/update-and-build.yml
+++ b/.github/workflows/update-and-build.yml
@@ -1,14 +1,29 @@
-name: Vodcasts - update + build (template)
+name: Update feeds and deploy
 
 on:
+  schedule:
+    - cron: "17 */3 * * *"
   workflow_dispatch: {}
+
+permissions:
+  contents: write
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     env:
-      VOD_BASE_PATH: ${{ vars.VOD_BASE_PATH || '/' }}
-      # Comments (optional)
+      VOD_FEEDS: ${{ vars.VOD_FEEDS }}
+      VOD_CACHE_BRANCH: ${{ vars.VOD_CACHE_BRANCH }}
+      VOD_BASE_PATH: ${{ vars.VOD_BASE_PATH }}
       VOD_SUPABASE_URL: ${{ secrets.VOD_SUPABASE_URL }}
       VOD_SUPABASE_ANON_KEY: ${{ secrets.VOD_SUPABASE_ANON_KEY }}
       VOD_HCAPTCHA_SITEKEY: ${{ secrets.VOD_HCAPTCHA_SITEKEY }}
@@ -16,18 +31,32 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Set feeds and cache
         run: |
-          FEEDS="${{ vars.VOD_FEEDS || 'feeds/dev.md' }}"
+          FEEDS="${VOD_FEEDS:-feeds/dev.md}"
           echo "VOD_FEEDS=$FEEDS" >> $GITHUB_ENV
           echo "VOD_CACHE=cache/$(basename "$FEEDS" .md)" >> $GITHUB_ENV
-          echo "VOD_OUT=dist" >> $GITHUB_ENV
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.12"
+
+      - name: Restore cached state (cache branch)
+        run: |
+          set -euo pipefail
+          CACHE_DIR="${VOD_CACHE}"
+          CACHE_BRANCH="${VOD_CACHE_BRANCH:-cache}"
+          echo "Using feeds: $VOD_FEEDS"
+          echo "Using cache: $CACHE_DIR (branch: $CACHE_BRANCH)"
+
+          git fetch origin "$CACHE_BRANCH:$CACHE_BRANCH" || true
+          if git show-ref --verify --quiet "refs/heads/$CACHE_BRANCH"; then
+            git restore --source "$CACHE_BRANCH" -- "$CACHE_DIR" || true
+          fi
 
       - name: Update feed cache
         run: |
@@ -37,10 +66,43 @@ jobs:
       - name: Build static site
         run: |
           set -euo pipefail
-          python -m scripts.build_site --feeds "$VOD_FEEDS" --cache "$VOD_CACHE" --out "$VOD_OUT" --base-path "$VOD_BASE_PATH"
+          python -m scripts.build_site --feeds "$VOD_FEEDS" --cache "$VOD_CACHE" --out dist --base-path "${VOD_BASE_PATH:-/}"
 
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
+      - name: Persist cache state (cache branch)
+        run: |
+          set -euo pipefail
+          CACHE_DIR="${VOD_CACHE}"
+          CACHE_BRANCH="${VOD_CACHE_BRANCH:-cache}"
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+
+          if git show-ref --verify --quiet "refs/heads/$CACHE_BRANCH"; then
+            git worktree add /tmp/cache-worktree "$CACHE_BRANCH"
+          else
+            git worktree add /tmp/cache-worktree -b "$CACHE_BRANCH"
+          fi
+
+          mkdir -p "$CACHE_DIR"
+          mkdir -p "/tmp/cache-worktree/$CACHE_DIR"
+          rsync -a --delete "$CACHE_DIR"/ "/tmp/cache-worktree/$CACHE_DIR"/
+
+          cd /tmp/cache-worktree
+          git add -f "$CACHE_DIR"
+          if git diff --cached --quiet; then
+            echo "No cache changes to push."
+          else
+            git commit -m "Update feed cache"
+            git push origin "HEAD:$CACHE_BRANCH"
+          fi
+
+      - name: Configure Pages
+        uses: actions/configure-pages@v5
+
+      - name: Upload Pages artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          name: vodcasts-dist
           path: dist
+
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
